Returns the correct character bounds when a text field overflows its contents

1. We were not using the unclipped bounds when calculating character bounds in BrowserAccessibility.
2. AXTree clipped bounds to 0 and dimension - 1, instead of container.x and container.dimension - 1.

R=dmazzoni@chromium.org

Bug: 831918
Change-Id: I2634d7244146d491aa6ae7ff7abc48f0a661033b
Reviewed-on: https://chromium-review.googlesource.com/1044355
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563519}
Former-commit-id: 4efd7e1319f90d6a919b51859301cd8316fbd42a